fixed top buttons, tag searcher and text alignment

--- a/src/global.css
+++ b/src/global.css
@@ -19,7 +19,7 @@
   font-size: 21px;
 }
 
-@media screen and (max-width: 490px) and (min-width: 10px) {
+@media screen and (max-width: 480px) and (min-width: 10px) {
   .trackNcodeBtn {
     display: none;
   }
@@ -58,7 +58,7 @@
 
 #ChoosingNodeMessage {
   position: absolute;
-  width: 469px;
+  width: auto;
   left: 490px;
   top: 25px;
   padding: 13px;
@@ -73,6 +73,22 @@
   color: #e5e5e5;
   z-index: 4;
   text-align: center;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 800px) and (min-width: 601px) {
+  #ChoosingNodeMessage {
+    width: auto;
+    left: 430px;
+    font-size: 12px;
+    padding: 5px;
+  }
+}
+
+@media screen and (max-width: 600px) and (min-width: 10px) {
+  #ChoosingNodeMessage {
+    display: none;
+  }
 }
 
 .spinner-white,
@@ -2696,6 +2712,7 @@ button.MuiTab-textColorInherit:focus {
   width: 100px;
   display: flex;
   /* align-items: center; */
+  justify-content: center;
   align-items: flex-start;
   visibility: visible;
   line-height: 16px;
