--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -558,17 +558,33 @@ i {
   padding: 5px;
 }
 
-@media screen and (max-width: 600px) and (min-width: 10px) {
+@media screen and (max-width: 800px) and (min-width: 431px) {
+  #tagModal #ModalBody {
+    width: 300px;
+    height: 350px;
+    left: 50px;
+    top: 220px;
+  }
+}
+
+@media screen and (max-width: 430px) and (min-width: 10px) {
   #tagModal #ModalBody {
     width: 300px;
     height: 350px;
     left: calc(50% - 150px);
     top: 220px;
+  }
+}
 
-    background: #1b1b1b;
-    box-shadow: 0px 0px 10px #ffffff;
-    border-radius: 5px;
-    padding: 5px;
+@media screen and (max-width: 800px) and (min-width: 601px) {
+  #tagModal .tagSelectorModalUserSetting {
+    top: 200px !important;
+    left: calc(50% - 150px) !important;
+  }
+}
+@media screen and (max-width: 600px) and (min-width: 1px) {
+  #tagModal .tagSelectorModalUserSetting {
+    top: 315px !important;
   }
 }
 
